// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.aconcagua";
option java_outer_classname = "AconcaguaProto";
option objc_class_prefix = "ACA";

// package aconcagua;

service Aconcagua {
	rpc GetMetadata (GetMetadataRequest) returns (GetMetadataReply) {}
	rpc GetObservations (GetObservationsRequest) returns (GetObservationsReply) {}
}

message GetMetadataRequest {
	map<string,string> requestmetadata = 1;
	repeated string metadataheaders = 2;
	repeated TimeseriesKey keys = 3;
}

message GetMetadataReply {
	map<string,string> replymetadata = 1;
	repeated string metadataheaders = 2;
	repeated MetadataList serieslist = 3;
}

message GetObservationsRequest {
	map<string,string> requestmetadata = 1;
	repeated string observationheaders = 2;
	repeated TimeseriesKey keys = 3;
}

message GetObservationsReply {
	map<string,string> replymetadata = 1;
	repeated string observationheaders = 2;
	repeated ObservationsList serieslist = 3;
}

message MetadataList {
	TimeseriesKey source = 1;
	TimeseriesKey key = 2;
	repeated string data = 3;
}

message ObservationsList {
	TimeseriesKey source = 1;
	TimeseriesKey key = 2;
	repeated float data = 3;
}

message TimeseriesKey {
	string database = 1;
	string seriescode = 2;
}