// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

// package aconcagua;

option java_multiple_files = true;
option java_package = "io.grpc.aconcagua";
option java_outer_classname = "AconcaguaProto";
option objc_class_prefix = "ACA";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service Aconcagua {
	rpc GetVersion(google.protobuf.Empty) returns (GetVersionResponse) {}
	rpc GetMetadata (GetMetadataRequest) returns (GetMetadataResponse) {}
	rpc GetObservations (GetObservationsRequest) returns (GetObservationsResponse) {}
}

message GetVersionResponse {
	string version = 1;
}

message GetMetadataRequest {
	map<string,string> requestmetadata = 1;
	repeated string metadataheaders = 2;
	repeated SourceSeriesKey keys = 3;
}

message GetMetadataResponse {
	map<string,string> responsemetadata = 1;
	repeated string metadataheaders = 2;
	repeated MetadataList datalist = 3;
}

message GetObservationsRequest {
	map<string,string> requestmetadata = 1;
	string frequencies = 2;
	repeated SourceSeriesKey keys = 3;
}

message GetObservationsResponse {
	map<string,string> responsemetadata = 1;
	repeated ObservationsList datalist = 3;
}

message MetadataList {
	SourceSeriesKey key = 1;
	repeated string data = 2;
}

message ObservationsList {
	SourceSeriesKey key = 1;
	map<string,double> values = 2;
}

message SourceSeriesKey {
	string sourcename = 1;
	string seriesname = 2;
}